[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "murainbot"
version = "0.0.1"
authors = [
  { name="Xiaosu", email="xiaosu@xiaosu.icu" },
]
description = "一个基于python适配onebot11协议的轻量级Onebot框架/QQ机器人框架/QQBot框架"
requires-python = ">=3.12"
dependencies = [
    "coloredlogs~=15.0.1",
    "requests~=2.32.3",
    "PyYAML~=6.0.2",
    "Flask~=3.1.1",
    "Werkzeug~=3.1.3",
    "coredumpy~=0.4.3",
    "typer>=0.9.0",
    "rich~=14.0.0"
]

readme = "README.md"
license-files = ["LICENSE"]

[project.scripts]
murainbot = "murainbot.cli:main"

[tool.setuptools]
packages = ["murainbot", "murainbot.utils", "murainbot.core"]
